force-app/main/default/objects/Opportunity/fields/Oppty_Amt_Value_AWS__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Amt_Value_AWS__c</fullName>
    <formula>if (ISBLANK(  Opportunity_Amount_AWS__c  ) ,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Amt Value (AWS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>