force-app/main/default/objects/Opportunity/fields/Oppty_Amt_Value_VAULT__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Amt_Value_VAULT__c</fullName>
    <formula>if (ISBLANK(  Opportunity_Amount_ARVault__c ) ,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Amt Value (VAULT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>