force-app/main/default/objects/Opportunity/fields/Opt_Out_Available_Until__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Available_Until__c</fullName>
    <description>If the quote/order has an opt out clause, put the date here by which it must be exercised.</description>
    <inlineHelpText>If the quote/order has an opt out clause, put the date here by which it must be exercised.</inlineHelpText>
    <label>Opt Out Available Until</label>
    <type>Date</type>
</CustomField>