force-app/main/default/objects/Opportunity/fields/Opt_Out_Clause__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Clause__c</fullName>
    <formula>&quot;Customer has the option to terminate this agreement on or before &quot; &amp; TEXT(Opt_Out_Available_Until__c) &amp; &quot; at no cost to the Customer. Upon termination on or before &quot; &amp; TEXT(Opt_Out_Available_Until__c) &amp; &quot;, any fees for Services paid by the Customer will be refunded and there will be no further obligations to AutoRABIT by the Customer. Notice of termination must be provided in writing, via email to &quot; &amp; Owner.Email &amp;&quot;.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opt Out Clause</label>
    <type>Text</type>
</CustomField>