force-app/main/default/objects/Opportunity/fields/Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Date__c</fullName>
    <description>Date the customer exercised the opt out clause of the contract for this opportunity. Only fill this out if the opportunity was Closed Won.</description>
    <inlineHelpText>Date the customer exercised the opt out clause of the contract for this opportunity. Only fill this out if the opportunity was Closed Won.</inlineHelpText>
    <label>Opt Out Exercise Date</label>
    <type>Date</type>
</CustomField>