force-app/main/default/objects/Opportunity/fields/Order_Attached__c.field-meta.xml
<CustomField>
    <fullName>Order_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A trigger will check this box if someone attaches a file to the opportunity that has the words PO or Order or Signed in it.</description>
    <label>Order Attached</label>
    <type>Checkbox</type>
</CustomField>