force-app/main/default/objects/Opportunity/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <formula>OppId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org ID</label>
    <type>Text</type>
</CustomField>