force-app/main/default/objects/Opportunity/fields/Other_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Other_Competitors__c</fullName>
    <label>Other Competitors</label>
    <length>90</length>
    <type>Text</type>
</CustomField>