force-app/main/default/objects/Opportunity/fields/Overall_Delay__c.field-meta.xml
<CustomField>
    <fullName>Overall_Delay__c</fullName>
    <formula>TODAY() - Implementation_End_Date__c</formula>
    <label>Overall Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>