force-app/main/default/objects/Opportunity/fields/Owner_Matches_Account__c.field-meta.xml
<CustomField>
    <fullName>Owner_Matches_Account__c</fullName>
    <description>Used to identify records that need the owner updated on either the opportunity or account</description>
    <formula>OwnerId  =  Account.OwnerId</formula>
    <label>Owner Matches Account</label>
    <type>Checkbox</type>
</CustomField>