force-app/main/default/objects/Opportunity/fields/Owner_Name_For_Tableau__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name_For_Tableau__c</fullName>
    <formula>Owner.FirstName &amp; &apos; &apos; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name For Tableau</label>
    <type>Text</type>
</CustomField>