force-app/main/default/objects/Opportunity/fields/Paid_Upfront_ARR__c.field-meta.xml
<CustomField>
    <fullName>Paid_Upfront_ARR__c</fullName>
    <label>Paid Upfront ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>