force-app/main/default/objects/Opportunity/fields/Partner_Account_Referral_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Referral_Percentage__c</fullName>
    <description>Referral Percentage set at the Partner Account selected.</description>
    <formula>Partner_Account__r.Referral_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Referral Percentage set at the Partner Account selected.</inlineHelpText>
    <label>Partner Account Referral Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>