force-app/main/default/objects/Opportunity/fields/Partner_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact_ID__c</fullName>
    <formula>Partner_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Contact ID</label>
    <type>Text</type>
</CustomField>