force-app/main/default/objects/Opportunity/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <description>Partner name from lead form</description>
    <label>Partner Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>