force-app/main/default/objects/Opportunity/fields/Partner_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Partner_Oppty__c</fullName>
    <description>To identify Partner Opportunities.</description>
    <formula>IF( AND( ISPICKVAL(Partner_Sourced__c, &apos;Partner Team Attributed&apos;), OR( ISPICKVAL(Partner_Oppty_Type__c, &apos;Reseller&apos;), ISPICKVAL(Partner_Oppty_Type__c, &apos;Direct Partner Purchase&apos;))),  &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Partner Sourced Direct Purchase or Reseller Opportunities.</inlineHelpText>
    <label>Partner Oppty</label>
    <type>Text</type>
</CustomField>