force-app/main/default/objects/Opportunity/fields/Partner_Oppty_NewLogo_Upsell_Amount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Oppty_NewLogo_Upsell_Amount__c</fullName>
    <inlineHelpText>We are using this to forecast Partner Opportunity New Logo or Upsell amount.</inlineHelpText>
    <label>Partner Oppty NewLogo/Upsell Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>