force-app/main/default/objects/Opportunity/fields/Partner_Oppty_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Oppty_Type__c</fullName>
    <label>Partner Oppty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Partner Purchase</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>