force-app/main/default/objects/Opportunity/fields/Partner_Referral_Fee__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral_Fee__c</fullName>
    <description>Referral Percentage * Total ARR Amount.</description>
    <formula>Referral_Percentage__c  *  Total_ARR_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Referral Percentage * Total ARR Amount.</inlineHelpText>
    <label>Partner Referral Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>