force-app/main/default/objects/Opportunity/fields/Partner_Sourced__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sourced__c</fullName>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Attributed</fullName>
            </value>
            <value>
                <fullName>Partner Team Attributed</fullName>
            </value>
            <value>
                <fullName>Rep Attributed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>