force-app/main/default/objects/Opportunity/fields/Payment_Expected__c.field-meta.xml
<CustomField>
    <fullName>Payment_Expected__c</fullName>
    <label>Payment Expected</label>
    <type>Date</type>
</CustomField>