force-app/main/default/objects/Opportunity/fields/Payment_Note__c.field-meta.xml
<CustomField>
    <fullName>Payment_Note__c</fullName>
    <label>Payment Note</label>
    <type>TextArea</type>
</CustomField>