force-app/main/default/objects/Opportunity/fields/Pendo_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Pendo_NPS_Score__c</fullName>
    <label>Pendo_NPS Score</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>