force-app/main/default/objects/Opportunity/fields/Pipeline_ARR_Value__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_ARR_Value__c</fullName>
    <description>This field was created at Bennett&apos;s request. AE&apos;s wanted a place to record what they think the upsell/downsell amount will be.</description>
    <inlineHelpText>Enter the ARR upsell or downsell amount expected when this opportunity is won.</inlineHelpText>
    <label>Pipeline ARR Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>