force-app/main/default/objects/Opportunity/fields/Plan_Details__c.field-meta.xml
<CustomField>
    <fullName>Plan_Details__c</fullName>
    <inlineHelpText>This is to understand whether its (Enterprise, Standard, Professional)</inlineHelpText>
    <label>Plan Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>