force-app/main/default/objects/Opportunity/fields/Playground_POC_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Playground_POC_Engineer__c</fullName>
    <label>Playground/POC Engineer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>