force-app/main/default/objects/Opportunity/fields/Playground_Set__c.field-meta.xml
<CustomField>
    <fullName>Playground_Set__c</fullName>
    <label>Playground Set</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Playground Set 01</fullName>
            </value>
            <value>
                <fullName>Playground Set 02</fullName>
            </value>
            <value>
                <fullName>Playground Set 03</fullName>
            </value>
            <value>
                <fullName>Playground Set 04</fullName>
            </value>
            <value>
                <fullName>Playground Set 05</fullName>
            </value>
            <value>
                <fullName>Playground Set 06</fullName>
            </value>
            <value>
                <fullName>Playground Set 07</fullName>
            </value>
            <value>
                <fullName>Playground Set 08</fullName>
            </value>
            <value>
                <fullName>Playground Set 09</fullName>
            </value>
            <value>
                <fullName>Playground Set 10</fullName>
            </value>
            <value>
                <fullName>Playground Set 11</fullName>
            </value>
            <value>
                <fullName>Playground Set 12</fullName>
            </value>
            <value>
                <fullName>Playground Set 13</fullName>
            </value>
            <value>
                <fullName>Playground Set 14</fullName>
            </value>
            <value>
                <fullName>Playground Set 15</fullName>
            </value>
            <value>
                <fullName>Playground Set 16</fullName>
            </value>
            <value>
                <fullName>Playground Set 17</fullName>
            </value>
            <value>
                <fullName>Playground Set 18</fullName>
            </value>
            <value>
                <fullName>Playground Set 19</fullName>
            </value>
            <value>
                <fullName>Playground Set 20</fullName>
            </value>
            <value>
                <fullName>Playground Set 21</fullName>
            </value>
            <value>
                <fullName>Playground Set 22</fullName>
            </value>
            <value>
                <fullName>Playground Set 23</fullName>
            </value>
            <value>
                <fullName>Playground Set 24</fullName>
            </value>
            <value>
                <fullName>Playground Set 25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>