force-app/main/default/objects/Opportunity/fields/Pre_SalesEngineer__c.field-meta.xml
<CustomField>
    <fullName>Pre_SalesEngineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Success Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>