force-app/main/default/objects/Opportunity/fields/Premium_Support__c.field-meta.xml
<CustomField>
    <fullName>Premium_Support__c</fullName>
    <inlineHelpText>Premium Customer (yes/ no) ?</inlineHelpText>
    <label>Premium Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>