force-app/main/default/objects/Opportunity/fields/Previous_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Previous_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Opportunity.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Subscription_Start_Date__c</field>
            <operation>greaterThan</operation>
            <valueField>Opportunity.Subscription_Start_Date__c</valueField>
        </filterItems>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Previous Opportunity)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>