force-app/main/default/objects/Opportunity/fields/Primary_Campaign_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_from_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Campaign from Lead</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>