force-app/main/default/objects/Opportunity/fields/Primary_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Time_Zone__c</fullName>
    <description>Time zone support should consider for this customer.</description>
    <inlineHelpText>Time zone support should consider for this customer.</inlineHelpText>
    <label>Primary Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Zone</valueSetName>
    </valueSet>
</CustomField>