force-app/main/default/objects/Opportunity/fields/PriorStage__c.field-meta.xml
<CustomField>
    <fullName>PriorStage__c</fullName>
    <description>Captures the previous stage value</description>
    <label>PriorStage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>