force-app/main/default/objects/Opportunity/fields/Probability_Adjusted_ARR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Probability_Adjusted_ARR_Amount__c</fullName>
    <formula>Probability *  Total_ARR_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability Adjusted ARR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>