force-app/main/default/objects/Opportunity/fields/Probability_Adjusted_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Probability_Adjusted_Opportunity_Amount__c</fullName>
    <formula>Probability  *  Opportunity_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability Adjusted Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>