force-app/main/default/objects/Opportunity/fields/Procurement_Complete__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procurement Complete?</label>
    <type>Checkbox</type>
</CustomField>