force-app/main/default/objects/Opportunity/fields/Procurement_Contact__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procurement Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Partner_Contact__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Procurement Contact)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>