force-app/main/default/objects/Opportunity/fields/Procurement_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Contact_ID__c</fullName>
    <formula>Procurement_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procurement Contact ID</label>
    <type>Text</type>
</CustomField>