force-app/main/default/objects/Opportunity/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>Implementation Services</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Vault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>