force-app/main/default/objects/Opportunity/fields/Professional_Services_hours__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_hours__c</fullName>
    <label>Professional Services (# hours)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>