force-app/main/default/objects/Opportunity/fields/ProServe_Amount__c.field-meta.xml
<CustomField>
    <fullName>ProServe_Amount__c</fullName>
    <inlineHelpText>Non-recurring Revenue.Excluding One Time Discount.</inlineHelpText>
    <label>NRR Amount</label>
    <summarizedField>OpportunityLineItem.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Recurring_Revenue__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>