force-app/main/default/objects/Opportunity/fields/PS_Hrs__c.field-meta.xml
<CustomField>
    <fullName>PS_Hrs__c</fullName>
    <description>Stores No of Professional Svc Hours per client.</description>
    <label>PS Hrs</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>