force-app/main/default/objects/Opportunity/fields/Receipted_On__c.field-meta.xml
<CustomField>
    <fullName>Receipted_On__c</fullName>
    <label>Receipted On</label>
    <type>Date</type>
</CustomField>