force-app/main/default/objects/Opportunity/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only Renewals would be applicable here</inlineHelpText>
    <label>Renewal?</label>
    <type>Checkbox</type>
</CustomField>