force-app/main/default/objects/Opportunity/fields/Renewal_ARR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_ARR_Amount__c</fullName>
    <inlineHelpText>We are using this to forecast opportunity ARR amount for renewals opportunities.</inlineHelpText>
    <label>Renewal ARR Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>