force-app/main/default/objects/Opportunity/fields/Renewal_Date_Cntrct_End_Date_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_Cntrct_End_Date_90_Days__c</fullName>
    <formula>Contract_End_Date__c  - 90</formula>
    <label>Renewal Date (Cntrct End Date - 90 Days)</label>
    <type>Date</type>
</CustomField>