force-app/main/default/objects/Opportunity/fields/Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity where this opportunity will be or has been renewed. This field is necessary to track when a series of opportunities moves from one account to another due to a partnership or purchase.</description>
    <inlineHelpText>Opportunity where this opportunity will be or has been renewed. This field is necessary to track when a series of opportunities moves from one account to another due to a partnership or purchase.</inlineHelpText>
    <label>Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Renewal Opportunity)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>