force-app/main/default/objects/Opportunity/fields/Renewal_Subs__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Subs__c</fullName>
    <formula>IF(INCLUDES(Opportunity_Type_New_Renewal_Upsell__c ,&quot;Renewal&quot;),
( No_of_Recurring_Products__c ),0)</formula>
    <inlineHelpText>Subscriptions Count of Recurring Revenue on Renewal</inlineHelpText>
    <label>Renewal Subs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>