force-app/main/default/objects/Opportunity/fields/Revenue_End_Month__c.field-meta.xml
<CustomField>
    <fullName>Revenue_End_Month__c</fullName>
    <description>First day of last month to recognize revenue for subscription. The goal is to allocate revenue for a 12 month contract that starts mid-month across 12 months rather than 13.</description>
    <formula>ADDMONTHS(Revenue_Start_Month__c, IF(VALUE(of_Months_for_Subs_Activation__c)-1&gt;0,VALUE(of_Months_for_Subs_Activation__c)-1,0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue End Month</label>
    <type>Date</type>
</CustomField>