force-app/main/default/objects/Opportunity/fields/Revenue_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Start_Month__c</fullName>
    <description>First day of month where we will start recognizing revenue for a subscription. Having a revenue start and end date will ensure 12 month contracts that start mid month are allocated over 12 months rather than 13.</description>
    <formula>DATE(YEAR(Subscription_Start_Date__c),MONTH(Subscription_Start_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Start Month</label>
    <type>Date</type>
</CustomField>