force-app/main/default/objects/Opportunity/fields/SaaS_Foundation_Items__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Foundation_Items__c</fullName>
    <description>Summed quantity of products with family SaaS Foundation.</description>
    <label>SaaS Foundation Items</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ProductFamily__c</field>
        <operation>equals</operation>
        <value>SaaS Foundation</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>