force-app/main/default/objects/Opportunity/fields/Sales_Rep_s_Activity_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_s_Activity_Comments__c</fullName>
    <description>Free text field to enter any notes or comments.</description>
    <label>Sales Rep&apos;s Activity Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>