force-app/main/default/objects/Opportunity/fields/SDR__c.field-meta.xml
<CustomField>
    <fullName>SDR__c</fullName>
    <label>SDR</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Partner_Sourced__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amrita Sen</fullName>
            </value>
            <value>
                <fullName>Andrew Boyles</fullName>
            </value>
            <value>
                <fullName>Anilreddy Chada</fullName>
            </value>
            <value>
                <fullName>Arvind Tripathy</fullName>
            </value>
            <value>
                <fullName>Belinda Trevor</fullName>
            </value>
            <value>
                <fullName>Breanne Mullen</fullName>
            </value>
            <value>
                <fullName>Daniel Cioffari</fullName>
            </value>
            <value>
                <fullName>Denchaline Ecaillat</fullName>
            </value>
            <value>
                <fullName>Drew McMillan</fullName>
            </value>
            <value>
                <fullName>Hunter Traffica</fullName>
            </value>
            <value>
                <fullName>Kainaz Dara Patel</fullName>
            </value>
            <value>
                <fullName>Krishna Chaitanya</fullName>
            </value>
            <value>
                <fullName>Luke Cartwright</fullName>
            </value>
            <value>
                <fullName>No SDR Involved</fullName>
            </value>
            <value>
                <fullName>Raynold Paul</fullName>
            </value>
            <value>
                <fullName>Ryan Watson</fullName>
            </value>
            <value>
                <fullName>Susan Michael</fullName>
            </value>
            <value>
                <fullName>Swati Gupta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>