force-app/main/default/objects/Opportunity/fields/Security_Complete__c.field-meta.xml
<CustomField>
    <fullName>Security_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security Complete?</label>
    <type>Checkbox</type>
</CustomField>